--- a/main/union_DIM_TIENDA_Meta_venta.ipynb
+++ b/main/union_DIM_TIENDA_Meta_venta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "04010362",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "f30dd32f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "8cfdebaf",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202304   1095804.32  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,20 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "3b01674d",
    "metadata": {},
    "outputs": [],
    "source": [
     "umbrales = {\n",
-    "    \"Base\": 480000,\n",
-    "    \"Hogar\": 490000,\n",
-    "    \"Peatonal\": 420000,\n",
-    "    \"Receso\": 516000\n",
+    "    \"BASE\": 480000,\n",
+    "    \"HOGAR\": 490000,\n",
+    "    \"PEATONAL\": 420000,\n",
+    "    \"RECESO\": 516000\n",
     "}\n",
     "\n",
     "# Asegurar que ENTORNO_DES no tenga espacios extras también\n",
-    "df_merged[\"ENTORNO_DES\"] = df_merged[\"ENTORNO_DES\"].str.strip().str.capitalize()  # estandariza\n",
+    "df_merged[\"ENTORNO_DES\"] = df_merged[\"ENTORNO_DES\"].str.strip() # estandariza\n",
     "\n",
     "# Crear columna TARGET\n",
     "df_merged[\"TARGET\"] = df_merged.apply(\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "f3b19932",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "      <td>126</td>\n",
        "      <td>1</td>\n",
        "      <td>BC</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>127.42</td>\n",
        "      <td>13</td>\n",
        "      <td>7</td>\n",
@@ -272,7 +272,7 @@
        "      <td>126</td>\n",
        "      <td>1</td>\n",
        "      <td>BC</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>127.42</td>\n",
        "      <td>13</td>\n",
        "      <td>7</td>\n",
@@ -289,7 +289,7 @@
        "      <td>126</td>\n",
        "      <td>1</td>\n",
        "      <td>BC</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>127.42</td>\n",
        "      <td>13</td>\n",
        "      <td>7</td>\n",
@@ -306,7 +306,7 @@
        "      <td>126</td>\n",
        "      <td>1</td>\n",
        "      <td>BC</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>127.42</td>\n",
        "      <td>13</td>\n",
        "      <td>7</td>\n",
@@ -323,7 +323,7 @@
        "      <td>126</td>\n",
        "      <td>1</td>\n",
        "      <td>BC</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>127.42</td>\n",
        "      <td>13</td>\n",
        "      <td>7</td>\n",
@@ -341,11 +341,11 @@
       ],
       "text/plain": [
        "   TIENDA_ID  PLAZA_CVE NIVELSOCIOECONOMICO_DES ENTORNO_DES  MTS2VENTAS_NUM  \\\n",
-       "0        126          1                      BC       Hogar          127.42   \n",
-       "1        126          1                      BC       Hogar          127.42   \n",
-       "2        126          1                      BC       Hogar          127.42   \n",
-       "3        126          1                      BC       Hogar          127.42   \n",
-       "4        126          1                      BC       Hogar          127.42   \n",
+       "0        126          1                      BC       HOGAR          127.42   \n",
+       "1        126          1                      BC       HOGAR          127.42   \n",
+       "2        126          1                      BC       HOGAR          127.42   \n",
+       "3        126          1                      BC       HOGAR          127.42   \n",
+       "4        126          1                      BC       HOGAR          127.42   \n",
        "\n",
        "   PUERTASREFRIG_NUM  CAJONESESTACIONAMIENTO_NUM  LATITUD_NUM  LONGITUD_NUM  \\\n",
        "0                 13                           7     25.69107    -100.21261   \n",
@@ -362,7 +362,7 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202304   1095804.32       1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
