--- a/main/union_DIM_TIENDA_TEST_META_venta.ipynb
+++ b/main/union_DIM_TIENDA_TEST_META_venta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "eb67dd32",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "29102a0f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "ff45bd65",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202404    840681.62  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,20 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "dce7df5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "umbrales = {\n",
-    "    \"Base\": 480000,\n",
-    "    \"Hogar\": 490000,\n",
-    "    \"Peatonal\": 420000,\n",
-    "    \"Receso\": 516000\n",
+    "    \"BASE\": 480000,\n",
+    "    \"HOGAR\": 490000,\n",
+    "    \"PEAATONAL\": 420000,\n",
+    "    \"RECESO\": 516000\n",
     "}\n",
     "\n",
     "# Asegurar que ENTORNO_DES no tenga espacios extras también\n",
-    "df_merged[\"ENTORNO_DES\"] = df_merged[\"ENTORNO_DES\"].str.strip().str.capitalize()  # estandariza\n",
+    "df_merged[\"ENTORNO_DES\"] = df_merged[\"ENTORNO_DES\"].str.strip()  # estandariza\n",
     "\n",
     "# Crear columna TARGET\n",
     "df_merged[\"TARGET\"] = df_merged.apply(\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "ba4d81cb",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "      <td>680</td>\n",
        "      <td>1</td>\n",
        "      <td>C</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>102.36</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
@@ -271,7 +271,7 @@
        "      <td>680</td>\n",
        "      <td>1</td>\n",
        "      <td>C</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>102.36</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
@@ -288,7 +288,7 @@
        "      <td>680</td>\n",
        "      <td>1</td>\n",
        "      <td>C</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>102.36</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
@@ -305,7 +305,7 @@
        "      <td>680</td>\n",
        "      <td>1</td>\n",
        "      <td>C</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>102.36</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
@@ -322,7 +322,7 @@
        "      <td>680</td>\n",
        "      <td>1</td>\n",
        "      <td>C</td>\n",
-       "      <td>Hogar</td>\n",
+       "      <td>HOGAR</td>\n",
        "      <td>102.36</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
@@ -340,11 +340,11 @@
       ],
       "text/plain": [
        "   TIENDA_ID  PLAZA_CVE NIVELSOCIOECONOMICO_DES ENTORNO_DES  MTS2VENTAS_NUM  \\\n",
-       "0        680          1                       C       Hogar          102.36   \n",
-       "1        680          1                       C       Hogar          102.36   \n",
-       "2        680          1                       C       Hogar          102.36   \n",
-       "3        680          1                       C       Hogar          102.36   \n",
-       "4        680          1                       C       Hogar          102.36   \n",
+       "0        680          1                       C       HOGAR          102.36   \n",
+       "1        680          1                       C       HOGAR          102.36   \n",
+       "2        680          1                       C       HOGAR          102.36   \n",
+       "3        680          1                       C       HOGAR          102.36   \n",
+       "4        680          1                       C       HOGAR          102.36   \n",
        "\n",
        "   PUERTASREFRIG_NUM  CAJONESESTACIONAMIENTO_NUM  LATITUD_NUM  LONGITUD_NUM  \\\n",
        "0                 13                           0     25.65488    -100.21207   \n",
@@ -361,7 +361,7 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202404    840681.62       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
