EDA sin terminar dataset DIM_TIENDA

--- a/main/union_DIM_TIENDA_Meta_venta.ipynb
+++ b/main/union_DIM_TIENDA_Meta_venta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "04010362",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "f30dd32f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "8cfdebaf",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202304   1095804.32  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "3b01674d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "f3b19932",
    "metadata": {},
    "outputs": [
@@ -362,13 +362,23 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202304   1095804.32       1  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "df64cb0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged.to_csv('../data/union_DIM_TIENDA_Meta_venta.csv', index=False)"
    ]
   }
  ],
