--- a/main/union_DIM_TIENDA_TEST_META_venta.ipynb
+++ b/main/union_DIM_TIENDA_TEST_META_venta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "eb67dd32",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "29102a0f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "ff45bd65",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202404    840681.62  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "dce7df5b",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "ba4d81cb",
    "metadata": {},
    "outputs": [
@@ -361,13 +361,23 @@
        "4         HOGAR REUNIÓN          UT_DENSIDAD  202404    840681.62       1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "140fcffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged.to_csv('../data/union_DIM_TIENDA_TEST_META_venta.csv', index=False)"
    ]
   }
  ],
